// PiQApi.ArchitectureRules/Projects/PiQApi.Abstractions/Diagrams/ValidationFramework.puml
@startuml PiQApi.Abstractions Validation Framework

title PiQApi.Abstractions Validation Framework
footer Generated from architectural guides - %date("yyyy.MM.dd")
legend right
  Validation framework architecture
  and component relationships
end legend

' Visual styling
skinparam componentStyle uml2
skinparam class {
  BackgroundColor White
  BorderColor Black
}

' Core Validation Types
interface "IValidationRule<T>" as IValidationRule {
  +Task<PiQValidationResult> ValidateAsync(T item, PiQValidationContext context, CancellationToken ct)
}

interface "IValidationRuleSet<T>" as IValidationRuleSet {
  +IReadOnlyCollection<IValidationRule<T>> GetRules()
}

class PiQValidationContext {
  +ValidationModeType Mode
  +PiQCorrelationId Id
  +IReadOnlyDictionary<string,object> Properties
}

class PiQValidationResult {
  +bool IsValid
  +IReadOnlyCollection<ValidationError> Errors
  +string CorrelationId
  +ValidationSeverityType Severity
  +{static} Success()
  +{static} Failure()
  +CombineWith()
}

class ValidationError {
  +string Code
  +string Message
  +ValidationSeverityType Severity
  +IReadOnlyDictionary<string,object> Context
}

' Validation Processing
interface IValidationProcessor {
  +Task<PiQValidationResult> ValidateAsync<T>(T item, IValidationRule<T> rule, ...)
  +Task<PiQValidationResult> ValidateAsync<T>(T item, IValidationRuleSet<T> ruleSet, ...)
}

' Result Integration
interface IResultFactory {
  +IPiQResult<T> FromValidationResult<T>(PiQValidationResult result)
}

' Relationships
IValidationRule ..> PiQValidationResult : creates
IValidationRule ..> PiQValidationContext : uses
IValidationProcessor ..> IValidationRule : executes
IValidationProcessor ..> IValidationRuleSet : executes
IValidationRuleSet *-- IValidationRule : contains
PiQValidationResult *-- ValidationError : contains
IResultFactory ..> PiQValidationResult : transforms

' Validation Flow
note right of IValidationProcessor
  Orchestrates validation execution
  and result aggregation
end note

note right of PiQValidationContext
  Carries validation state
  and configuration
end note

@enduml
